added rotation and fixed card size
added 180deg rotation made front and back of the card
added color gradient
added valid links

--- a/card.html
+++ b/card.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>apurb's card</title>
-  <link rel="stylesheet" href="card.css">
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="card.css">
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-
 <body>
-  <div class="card do_flx">
-    <img src="apurbo.jpg" alt="apurbos wearing a black suit in dark with a
-            a parrot on his hand" class="img_opt">
-    <div class="add_padding">
-      <div class="mk_center">
-        <h2>Apurbo Das</h2>
-        <p class="grn">Coder</p>
-      </div>
-      <div class="mk_center">
-        <p>Hi, I am a code enthuasist Competitive programer Fullstack
-          devoloper I like to learn new things and new challenges</p>
-      </div>
-      <p class="grn mk_center"> Contact me</p>
-      <div class="contact_me mk_center">
-        <a href=""><i class='bx bxl-facebook'></i></a>
-        <a href=""><i class='bx bxl-twitter'></i></a>
-        <a href=""><i class='bx bxl-discord-alt'></i></a>
-        <a href=""><i class='bx bxl-linkedin-square'></i></a>
-        <a href=""><i class='bx bxl-github'></i></a>
+
+<h1>Busines card 2.0</h1>
+<h3>Hover  below:</h3>
+
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front ">
+      <p class="front">  <span class="blu">alert</span>
+        <span>(<span class="grn">'Hello World!'</span>)</span></p>
+    </div>
+    <div class="flip-card-back">
+      <img src="apurbo.jpg" alt="Avatar" id="avatar">
+      <div class="add-padding">
+        <div class="mk-center">
+          <h2>Apurbo Das</h2>
+          <p class="red">Coder</p>
+        </div>
+        <div class="mk-center">
+          <p>Hi, I am a code enthuasist Competitive programer Fullstack
+            devoloper I like to learn new things and new challenges</p>
+        </div>
+        <p class="blu mk-center"> Contact me</p>
+        <div class="contact-me mk-center">
+          <a href="https://www.facebook.com/people/%E0%A6%B6%E0%A7%81-%E0%A6%AD%E0%A7%8D%E0%A6%B0/pfbid02M3Df8ZFey1ZoXKXHjxjJCPKiGDFpkJK8mGzvx8f6jpCCFC3fBucxoydfYm25P2MJl/"><i class='bx bxl-facebook'></i></a>
+          <a href="https://twitter.com/shuv1729"><i class='bx bxl-twitter'></i></a>
+          <a href="https://discord.com/_the_boring_guy__97813"><i class='bx bxl-discord-alt'></i></a>
+          <a href="https://www.linkedin.com/in/suvro-kumar-das-8112ba2b8/"><i class='bx bxl-linkedin-square'></i></a>
+          <a href="https://github.com/shuv001"><i class='bx bxl-github'></i></a>
+        </div>
       </div>
     </div>
   </div>
+</div>
 </body>
-
 </html>
